Wed May 22 23:18:26 2002  Priyanka  <oci@cs.wustl.edu>

        * ACE version 5.2.3 released.

Sat May 18 09:32:58 2002  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_SOCK_Stream.cpp (get_remote_addr):

	  Set errno to ENOTCONN if the SSL connection hasn't been
	  completed yet, and errno to EBADF if the file descriptor hasn't
	  been set yet.  This emulates the getpeername() errno semantics.

Sat May 18 08:19:48 2002  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_Connector.h:
	* ace/SSL/SSL_Connector.cpp:

	  Temporarily removed these files since there are still some
	  thread-safefy issues to be addressed in the implementation.
	  Better to wait until after the forthcoming beta to ship them.

Fri May 17 07:32:49 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/Log_Msg.cpp: Replaced ACE_NEW_RETURN_I with ACE_NEW_RETURN.
	  Thanks to Johnny Willemsen for reporting this.

Thu May 16 20:15:36 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/OS.i: Added ACE_HAS_ISASTREAM_PROTO guard around the
	  extern "C" int isastream() method.  Thanks to Oleg Terletsky
 	  <oterletsky@comcast.net> for reporting this.

	* ace/ARGV.h: Added a comment that points out the "add()" method
	  doesn't handle memory management.  Thanks to Kyle Brost
 	  <kyle.brost@quest.com> and Don Hinton for clarifying this.

Thu May 16 17:05:19 2002  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_Connector.cpp (handle_input, handle_output):

	  Qualify the AST type with its appropriate scope.  g++ requires
	  it.

Thu May 16 15:28:24 2002  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_Connector.h:
	* ace/SSL/SSL_Connector.cpp:

	  New ACE_SSL-specific subclasses of the standard
	  ACE_{Strategy_}Connector classes.  The standard ACE_Connector
	  class assumes that a connection is established once the stream
	  handle becomes writable.  However, that only holds for protocols
	  with a single handshake, such as TCP.  Protocols with multiple