@@ -1514,7 +1514,7 @@ Peter Kullmann <P.Kullmann@rog.de>
 Lyn Headley <headley@wolve.com>
 Jeff Adams <Jeff.Adams@gd-ais.com>
 Timothy Culp <timothy.culp@computer.org>
-Oleg Terletsky <oterletsky@comcast.net>
+Oleg Oterletsky <oterletsky@comcast.net>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
