@@ -438,12 +438,13 @@ protected:
   /// Function object used for comparing keys.
   COMPARE_KEYS compare_keys_;
 
-private:
+protected:
   /// Returns the <ACE_Hash_Map_Entry> that corresponds to <ext_id>.
   int shared_find (const EXT_ID &ext_id,
                    ACE_Hash_Map_Entry<EXT_ID, INT_ID> *&entry,
                    u_long &loc);
 
+private:
   /**
    * Array of <ACE_Hash_Map_Entry> *s, each of which points to an
    * <ACE_Hash_Map_Entry> that serves as the beginning of a linked
