@@ -1,3 +1,15 @@
+Thu May 23 07:53:37 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>
+
+	* examples/Misc/test_read_buffer.cpp (ACE_TMAIN): Use ACE_STDIN
+	  rather than 0.  Thanks to Soeren Gerlach <soeren.gerlach@gmx.de>
+	  for motivating this.
+
+Tue May 21 06:13:50 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>
+
+	* ace/Hash_Map_Manager_T.h (class ACE_Hash_Map_Manager_Ex): Made
+	  shared_find() protected rather than private.  Thanks to
+	  Ganesh Pai <GPai@sonusnet.com> for reporting this.
+
 Wed May 22 23:18:26 2002  Priyanka  <oci@cs.wustl.edu>
 
         * ACE version 5.2.3 released.
